--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <div class="logo-project">
             <img class="imagemdoprojeto" src="./assents/logo01.jpg" width="100" height="100" alt="">
-            <h1>Lary Doceria</h1>
+            <h1><b>Lary Doceria</b></h1>
         </div>
 
         <div class="menu">
             <ul>
-                <li> <a href="#" class="menu-link">Home</a> </li>
-                <li> <a href="#" class="menu-link">Serviços</a> </li>
-                <li> <a href="#" class="menu-link">Parceiros</a> </li>
+                <li> <a href="#" class="menu-link"><b>Home</b></a> </li>
+                <li> <a href="#" class="menu-link"><b>Serviços</b></a> </li>
+                <li> <a href="#" class="menu-link"><b>Parceiros</b></a> </li>
                 <button class="button"> <b>Faça seu Pedido</b></button>
             </ul>
         </div>
