adicionado imagem de fundo

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
         <div class="menu">
             <ul>
-                <li> <a href="#" class="menu-link"><b>Home</b></a> </li>
-                <li> <a href="#" class="menu-link"><b>Serviços</b></a> </li>
-                <li> <a href="#" class="menu-link"><b>Parceiros</b></a> </li>
-                <button class="button"> <b>Faça seu Pedido</b></button>
+                <li> <a href="#" class="menu-link">Home</a> </li>
+                <li> <a href="#" class="menu-link">Serviços</a> </li>
+                <li> <a href="#" class="menu-link">Parceiros</a> </li>
+                <button class="button">Faça seu Pedido</button>
             </ul>
         </div>
 
