add nova pagina no projeto

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <header>
 
         <div class="logo-project">
-            <img class="imagemdoprojeto" src="./assents/logo01.jpg" width="100" height="100" alt="">
-            <h1><b>Lary Doceria</b></h1>
+            <img class="imagemdoprojeto" src="./assents/logonovadoprojeto.jpg" width="190" height="130" alt="">
+            
         </div>
 
         <div class="menu">
@@ -31,7 +31,7 @@
                 <li> <a href="#" class="menu-link">Home</a> </li>
                 <li> <a href="#" class="menu-link">Serviços</a> </li>
                 <li> <a href="#" class="menu-link">Parceiros</a> </li>
-                <button class="button">Faça seu Pedido</button>
+                <button class="button"><b>Faça seu Pedido</b></button>
             </ul>
         </div>
 
@@ -65,7 +65,7 @@
 
     <div class="check-list">
         <button class="click-info"><b>CLIENTES</b></button>
-        <button class="click-info"><b>CURSOS</b></button>
+        <button class="click-info"> <a href="http://127.0.0.1:5500/cardapio.html" target="_blank"></a><b>CARDÁPIO</b></button>
     </div>
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
