--- a/cardapio.html
+++ b/cardapio.html
@@ -38,11 +38,8 @@
             <h1>O QUERIDINHO </h1>
             <p>Bolo de Cenoura com Cobertura de Chocolate e Granulado: O Carro-Chefe da Nossa Doceria
 
-                O nosso bolo de cenoura com cobertura de chocolate e granulado é, sem dúvida, o grande favorito dos
-                nossos
-                clientes. Famoso pelo sabor irresistível e a combinação perfeita entre o doce e o leve, esse bolo se
-                tornou
-                um verdadeiro clássico da nossa doceria.
+                É sem dúvida, o grande favorito dos nossos clientes. Famoso pelo sabor irresistível e a combinação
+                perfeita entre o doce e o leve, esse bolo se tornou um verdadeiro clássico da nossa doceria.
 
                 A massa, feita com cenouras frescas e ingredientes selecionados, é macia e úmida, proporcionando uma
                 experiência única a cada fatia. A cobertura de chocolate, cremosa e rica, dá o toque especial, enquanto
