--- a/cardapio.html
+++ b/cardapio.html
@@ -36,7 +36,7 @@
 
         <div class="texto">
             <h1>O QUERIDINHO </h1>
-            <p>Bolo de Cenoura com Cobertura de Chocolate e Granulado: O Carro-Chefe da Nossa Doceria
+            <p>Bolo de Cenoura com Cobertura de Chocolate e Granulado: O Carro-Chefe da Nossa Doceria...
 
                 É sem dúvida, o grande favorito dos nossos clientes. Famoso pelo sabor irresistível e a combinação
                 perfeita entre o doce e o leve, esse bolo se tornou um verdadeiro clássico da nossa doceria.
