--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="logo-project">
             <img class="imagemdoprojeto" src="./assents/logonovadoprojeto.jpg" width="190" height="130" alt="">
-            
+
         </div>
 
         <div class="menu">
@@ -65,7 +65,8 @@
 
     <div class="check-list">
         <button class="click-info"><b>CLIENTES</b></button>
-        <button class="click-info"> <a href="http://127.0.0.1:5500/cardapio.html" target="_blank"></a><b>CARDÁPIO</b></button>
+        <button class="click-info"> <a href="http://127.0.0.1:5500/cardapio.html"
+                target="_blank"></a><b>CARDÁPIO</b></button>
     </div>
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -86,6 +87,11 @@
 
             </div>
         </div>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3738.1820999916285!2d-54.590530288428496!3d-20.45771258097346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9486e8954ac0b10d%3A0x7149aba0cb5688b8!2sShopping%20Campo%20Grande!5e0!3m2!1spt-BR!2sbr!4v1730936602892!5m2!1spt-BR!2sbr"
+            width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
