--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Itim&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Wet+Paint&family=Unlock&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cardapio.css">
+    <link rel="stylesheet" href="cardapio.html">
 
     <title>Lary Doceria CG</title>
 </head>
