atualização do projeto

--- a/cardapio.html
+++ b/cardapio.html
@@ -23,28 +23,29 @@
 
     </header>
 
+
+
+
     <div class="bolo-chefe">
 
-        <img class="bolo" src="./preços/carrochefe.jpg" width="400" height="400" alt="">
-
-        <div class="texto">
-            <h1>O QUERIDINHO </h1>
-            <p>Bolo de Cenoura com Cobertura de Chocolate e Granulado: O Carro-Chefe da Nossa Doceria...
-
-                É sem dúvida, o grande favorito dos nossos clientes. Famoso pelo sabor irresistível e a combinação
-                perfeita entre o doce e o leve, esse bolo se tornou um verdadeiro clássico da nossa doceria.
-
-                A massa, feita com cenouras frescas e ingredientes selecionados, é macia e úmida, proporcionando uma
-                experiência única a cada fatia. A cobertura de chocolate, cremosa e rica, dá o toque especial, enquanto
-                o
-                granulado confere crocância e um sabor que agrada a todos os paladares. Esse bolo é perfeito para
-                qualquer
-                ocasião, seja para uma festa, um café da tarde ou para aquele momento de prazer no seu dia. Venha provar
-                e
-                descubra por que ele é o queridinho dos nossos clientes!</p>
+        <div class="fest">
+            <a href="http://127.0.0.1:5500/kitfesta.html" target="_blank">
+                <img class="docinho" src="./kitfestas/kit03.jpg" width="150" height="150" alt="">
+                <h1>Kit Festa</h1>
+            </a>
         </div>
 
+        <div class="present">
+            <a href="http://127.0.0.1:5500/kitpresent.html" target="_blank">
+                <img class="docinho" src="./kitpresentes/kitPresente07.jpg" width="150" height="150" alt="">
+                <h1>Kit Presentes</h1>
+            </a>
+        </div>
+
+
     </div>
+
+    <h2 class="products">Os mais Vendidos</h2>
 
     <div class="brigadeiros">
 
@@ -68,7 +69,7 @@
                 <li>R$ 80,00 cent.</li>
             </a>
 
-        </div class="card">
+        </div>
 
         <div class="card">
             <a href="https://web.whatsapp.com/send?phone=5567993148824" target="_blank">
@@ -102,9 +103,7 @@
 
         </div>
 
-        <a class="instagram-link" href="https://www.instagram.com/larydoceriacg/?igsh=MXNxMzMxaDlhMHg1eg%3D%3D"
-            target="_blank">
-            <i class="fa fa-instagram"></i>
+        <button class="check-list">Saiba Mais</button>
         </a>
 
     </div>
