atualização em js

--- a/cardapio.html
+++ b/cardapio.html
@@ -18,13 +18,10 @@
         <div class="menu">
             <img class="imagem" src="./preços/logo01.jpg" width="100" height="100" alt="">
 
-            <input class="meu-input" placeholder="Precisa de alguma coisa?" type="text">
+            <input id="search" placeholder="Precisa de alguma coisa?" type="text">
         </div>
 
     </header>
-
-
-
 
     <div class="bolo-chefe">
 
@@ -109,7 +106,7 @@
     </div>
 
 
-
+<script src="./scripts.js"></script>
 
 </body>
 
