--- a/cardapio.html
+++ b/cardapio.html
@@ -100,7 +100,7 @@
 
         </div>
 
-        <button class="check-list">Saiba Mais</button>
+        <button class="check-list">Variedades</button>
         </a>
 
     </div>
