atualização do projeto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=Itim&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Wet+Paint&family=Unlock&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
    
     <title>Lary Doceria CG</title>
@@ -31,7 +31,7 @@
         <ul>
             <li> Criando memórias afetivas há 14 anos</li>
 
-            <a href="http://127.0.0.1:5500/cardapio.html" target="_blank"> <button class="button"><b>Faça seu
+            <a href="cardapio.html" target="_blank"> <button class="button"><b>Faça seu
                         Pedido</b></button> </a>
 
         </ul>
@@ -41,7 +41,7 @@
         <img class="capa" src="./assents/img08.jpg" width="200" height="200" alt="">
 
         <p class="project-text">
-            Em Campo Grande, MS, o brigadeiro da Lary é uma verdadeira sensação! Conhecida pela sua habilidade em criar
+            Em Campo Grande - MS, o brigadeiro da Lary é uma verdadeira sensação! Conhecida pela sua habilidade em criar
             doces irresistíveis, Lary transforma o brigadeiro tradicional em uma experiência gourmet. Com ingredientes
             selecionados e um toque especial, seus brigadeiros são incrivelmente cremosos e saborosos.
 
@@ -89,6 +89,8 @@
         </iframe>
 
     </div>
+
+    
 
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
