--- a/cardapio.html
+++ b/cardapio.html
@@ -28,7 +28,7 @@
         <div class="fest">
             <a href="http://127.0.0.1:5500/kitfesta.html " target="_blank">
                 <img class="docinho" src="./kitfestas/kit03.jpg" width="150" height="150" alt="">
-                <h1>Kit Festa</h1>
+                <h1>Kit Festas</h1>
             </a>
         </div>
 
